# pytemplate

./: README.md  cookiecutter.json  pyproject.toml
docs/: cli.md  configuration.md  index.md  testing.md
hooks/: post_gen_project.py
tests/: config.py  replay-min.json  replay.json  test_cookiecutter.py
{{cookiecutter.__clean_name}}/: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.__clean_name}}/src/{{cookiecutter.__clean_slug}}/: logging.py  {{cookiecutter.__clean_slug}}.py
{{cookiecutter.__clean_name}}/tests/: test_{{cookiecutter.__clean_slug}}.py
