[project]
name = "pattern"
version = "2.1.0"
description = "Pattern - A modern, opinionated, cookiecutter template for your next Python project."
authors = [{ name = "Wyatt Ferguson", email = "wyattxdev@duck.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ['cookiecutter', 'template', 'uv', 'python', 'project', 'generator', 'pattern']
requires-python = ">=3.11,<4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
  "cookiecutter>=2.1.1",
  "loguru>=0.7.3",
  "pytest-sugar>=1.1.1",
  "pytest-testmon>=2.2.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a11",
    "pytest>=8.4.1",
    "pytest-cookies>=0.7.0",
    "ruff>=0.12.0",
    "toml>=0.10.2",
    "mkdocs>=1.3.1",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-material>=9.6.14",
    "mkdocstrings>=0.29.1",
    "pymdown-extensions>=10.15",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-github-admonitions-plugin>=0.1.1",
    "cffconvert>=2.0.0",
    "ipdb>=0.13.13",
    "pytest-testmon>=2.2.0",
]

[project.urls]
Repository = "https://github.com/wyattferguson/pattern"
Documentation = "https://wyattferguson.github.io/pattern"
Issues = "https://github.com/wyattferguson/pattern/issues"

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py313"
src = ["tests","hooks"]

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "FA102", # Flake8-future-annotations
    "F401", # Disable fix for unused imports
    "B904", # Allow raising exceptions without from e
    "PLR0913", # too many arguments
    "CPY", # Flake8-copyright
    "T201", # Debugging print statements
    "ERA", # Eradicate – detects commented-out code
    "BLE001", # Catch-all exceptions
    "D100", # missing docstring in public module
    "D105", # undocumented magic method
    "D107", # undocumented public init
    "D203", # incorrect-blank-line-before-class
    "D205", # line-between-summary-and-description
    "D212", # multi-line-summary-first-line
    "D407", # missing-dashed-underline-after-section
    "S311", # rand-usage
]

[tool.ty]
src.root = "."
environment.python = "./.venv"
terminal.output-format = "concise"
