
[project]
name = "{{cookiecutter.__clean_slug}}"
version = "0.1.0"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python"]
requires-python = ">=3.11,<4"
classifiers = [
    "{{cookiecutter.development_status}}",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pytest-testmon>=2.2.0",
    "pytest-sugar>=1.0.0",
    "ty>=0.0.1a11",
    "pytest>=8.4.1",
    "coverage>=7.8.2",
    "ruff>=0.12.0",
    {%- if cookiecutter.include_docs == 'y' %}
    "portray>=1.8.0",
    "legacy-cgi>=2.6.3",
    "setuptools>=80.9.0",
    {%- endif %}
    "pre-commit>=4.2.0",
]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repository_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repository_name}}.git"
{%- if cookiecutter.include_docs == 'y' %}
documentation = "https://{{cookiecutter.github_username}}.github.io/{{cookiecutter.repository_name}}"
{%- else %}
documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repository_name}}"
{%- endif %}
issues = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.repository_name}}/issues"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
indent-width = 4
format.indent-style = "space"
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
pydocstyle.convention = "google"
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "FA102", # Flake8-future-annotations
    "B904", # Allow raising exceptions without from e
    "PLR0913", # too many arguments
    "CPY", # Flake8-copyright
    "T201", # Debugging print statements
    "ERA", # Eradicate – detects commented-out code
    "BLE001", # Catch-all exceptions
    "D100", # missing docstring in public module
    "D105", # undocumented magic method
    "D107", # undocumented public init
    "D212", # multi-line-summary-first-line
    "D400", # missing-trailing-period
    "D407", # missing-dashed-underline-after-section
    "S311", # rand-usage
    "EM102", # f-string-exception
    "TRY003", # long-exception-messages
]

[tool.ty]
environment.root = "./src"
environment.python = "./.venv"
terminal.output-format = "concise"

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 100

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["_*.py", "__*.py"]

[tool.portray.mkdocs]
site_name = "{{cookiecutter.project_name}}"

[tool.portray.mkdocs.theme]
name = "material"
custom_dir = "docs"
palette = {scheme= "slate", primary="deep purple", accent="purple"}
